DMP-461 update after rebase